*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.10.0@10041 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -559,7 +559,7 @@ LeagueNewsFilter.lineupChanges=Opstillings ændringer
 
 #team pages
 sidebarBox.actions=Handlinger
-TeamSelectBox.selectplayer=Vælg player
+TeamSelectBox.selectplayer=Vælg spiller
 ExtendedPlayerDetails.perseason=/ Sæson
 ExtraPlayerInfo.defensiveTrainer=En %s træner, der er defensivt orienteret.
 ExtraPlayerInfo.offensiveTrainer=En %s træner, der er offensivt orienteret.
@@ -887,7 +887,7 @@ ConfirmActions.ntremove=Ønsker du virkelig at tilføje/fjerne denne spiller fra
 
 # links
 links.boxheader=Links
-links.custom.selecticon=Vælg ikonet
+links.custom.selecticon=Vælg ikon
 links.custom.addpersonallink=Tilføj personlige link
 links.custom.addlink=Tilføj link
 links.custom.remove=Fjern
