--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -771,10 +771,10 @@ match.player.unknown=Jugador desconocido
 # SkillTable
 SkillTable.header=Tabla de Habilidades
 SkillTable.switchView=Cambiar Vista
-SkillTable.addHomegrown=Añadir canterano
+SkillTable.addHomegrown=Añadir juveniles
 SkillTable.showTimeInClub=Mostrar tiempo en el club
 SkillTable.switchView.title=Cambiar la vista de la tabla
-SkillTable.addHomegrown.title=Añadir a todos los canterandos del equipo actual
+SkillTable.addHomegrown.title=Añadir a todos los juveniles del equipo actual
 SkillTable.showTimeInClub.title=Mostrar el tiempo desde que el jugador se unió al equipo mayor
 PlayerNumber=Número
 PlayerNumber.abbr=\#
