--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -58,6 +58,7 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Namjestiti prvi dan u tjednu po iz
 module.StaffMarker.desc=Istaknuti bojom nadimke HT-osoblja na forumima. U tekstualnom meniju možete sami definirati stil označavanja (u HTML stilu).
 module.StaffMarker.manager.desc=Istaknuti bojom nadimke HT-osoblja na klupskoj stranici.
 module.StaffMarker.own.desc=Osobne oznake
+module.StaffMarker.external.desc=Označi osoblje drugih chpp aplikacija
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Prikazati alatnu traku s oznakama za juniorsku akademiju kod pisanja poruke na forumu (također i u Sandučiću, Izjavi za tisak, Knjizi gostiju)
 module.ForumYouthIcons.q.desc=Dodaje ikonu za citiranje tagova ako nedostaje
@@ -103,6 +104,7 @@ module.CopyPostID.desc=Opcija kopiranja ID broja poruke na forumu
 module.CopyPosting.desc=Dodati ikonu za kopiranje poruke na forumu uključujući i pripadajuće reference
 module.ShowForumPrefButton.desc=Prikazati prečicu za podešavanje foruma na svim stranicama foruma
 module.Links.desc=Osnovna opcija nužna da ostale opcije mogu raditi normalno.
+module.Links.AddServer.desc=Dodaje vaš trenutni Hattrick server na popis linkova. Ovo bi moglo omogućiti da se sve vanjske stranice pravilno preusmjere na Hattrick. Također namješta cookiese na neke vanjske stranice koje sadrže npr. "ht-server\=www77.hattrick.org" s istom namjenom (samo za korisnike Mozille i Chromea).
 module.LinksLeague.desc=Dodati neke vanjske linkove na ligaškoj stranici
 module.LinksTeam.desc=Dodati neke vanjske linkove na stranici momčadi
 module.LinksCountry.desc=Dodati neke vanjske linkove na stranici države
@@ -375,6 +377,10 @@ module.ShowLineupSet.Winning.desc=Ističe momčadi koje su pobijedile
 module.SupporterStatsEnhancements.desc=Ističe trenutne igrače u supporterskim statistikama
 module.MobileEnhancements.desc=Postavi poboljšanja za mobilne uređaje
 module.MatchOrderInterface.desc=Popravci na stranici postavljanja momčadi. 
+module.MatchOrderInterface.GotTrainingOnField.desc=Igrači koji su već primili trening će također biti označeni na polju (samo za supportere)
+module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Pokazuje informacije o zadnjoj utakmici u oblačiću
+module.MatchOrderInterface.CloneOrder.desc=Dodaj link za kloniranje naredbi
+module.MatchOrderInterface.AutoExpandCloned.desc=Automatski proširi kloniranu naredbu
 module.MatchOrderInterface.Specialties.desc=Pokaži specijalnosti
 module.MatchOrderInterface.ShowFaces.desc=Pokaži lica igrača umjesto dresa za buduće i prethodne postave
 module.MatchOrderInterface.StayOnPage.desc=Ostanite na stranici postavljanja taktike nakon spremanja naloga
@@ -392,19 +398,37 @@ module.RatingsDisplay.HatStats.desc=Kao HatStats
 module.RatingsDisplay.HTSums.desc=Zbroj ocjena kao u Hattricku
 module.SafeForWork.desc=Zamjenjuje ikonu i naslovni tekst Hattrickovih kartica
 module.PlayerStatsExperience.desc=Pokazuje podrazinu iskustva na igračevoj stranici
+module.PlayerStatsExperience.AlwaysShowAll.desc=Prikaži koliko god je moguće utakmica kada se koristi link na igračevoj stranici ili u prošlim izvedbama
 module.YouthTwins.desc=Prikazuje broj potencijalnih blizanaca vaših juniora u suradnji s hattrick youthclubom. Ne morate imati račun na hattrick youthclubu da biste koristili ovu opciju. S obzirom da je znanje o igračevom izgledu nužno za prepoznavanje blizanaca, ova opcija je korisna samo za supportere.
+module.YouthTwins.HideInfoLink.desc=Onemogući informacijski link za novopridošle
+module.FriendlyPool.desc=Oboji posjećene zemlje u bubnju za odabir prijateljskih
 #accessability
+module.ARIALandmarks.desc=Dodaje ARIA orijentir na sve dijelove stranice kako bi se olakšala navigacija kada se koriste čitači zaslona
 
+module.TransferHistoryFilters.desc=Dodaje opcije filtera na stranici povijesti transfera 
 
 #htevprediction
+module.HTEVPrediction.desc=Prikazuje šanse za ligaške utakmice preko http\://htev.org (by furr_)
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #htev
+HTEVPrediction.home.short=D
+HTEVPrediction.away.short=G
+HTEVPrediction.tie.short=I
+HTEVPrediction.explainHome=Šanse da domaćin pobijedi
+HTEVPrediction.explainTie=Šanse za neriješen rezultat
+HTEVPrediction.explainAway=Šanse da gost pobijedi
+HTEVPrediction.visitLeague=Posjeti ligu na http\://www.htev.org
+HTEVPrediction.visitDetailed=Detaljne informacije o ovoj utakmici na http\://www.htev.org
 
 #transfer-history-filters
+TransferHistoryFilters.all=Sve
+TransferHistoryFilters.sold=Prodan
+TransferHistoryFilters.bought=Kupljen
+TransferHistoryFilters.filter=Filter\:
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Bonus matičnog kluba)
@@ -416,6 +440,7 @@ YouthTwins.markedTwins=Označen kao blizanac\: %1
 YouthTwins.nonTwins=Označen kao ne-blizanac\: %1
 YouthTwins.undecidedTwins=Još nije označen\: %1
 YouthTwins.nonHyUser=Možete saznati više o njegovom potencijalu koristeći hattrick youthclub.
+YouthTwins.infoText=Što su blizanci i kako mogu profitirati od njih?
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Već je prikupio između %1 i %2 od 28 iskustvenih bodova. Njegovo iskustvo je između %3 i %4.
@@ -426,7 +451,26 @@ PlayerStatsExperience.ExperienceChange.title.abbr=IS+
 PlayerStatsExperience.Walkover=Ova utakmica je bila bez borbe, stoga igrači nisu dobili iskustvo.
 
 
+PlayerStatsExperience.MatchesSinceSkilup=Utakmice od zadnjeg skoka vještine
+PlayerStatsExperience.matches=Utakmice
+PlayerStatsExperience.minutes=Minute
+PlayerStatsExperience.minXPpts=Min. ISK bod.
+PlayerStatsExperience.maxXPpts=Maks. ISK bod.
+PlayerStatsExperience.sum=Zbroj
+PlayerStatsExperience.Experience=Iskustvo
+PlayerStatsExperience.PerformanceHistory=Prošle izvedbe
+PlayerStatsExperience.InternationalPercentage=Međunarodne prijateljske u %\:
 
+PlayerStatsExperience.matchFriendly=Prijateljske
+PlayerStatsExperience.matchInternationalFriendly=Međunarodne
+PlayerStatsExperience.matchNationalFriendly=Nacionalne
+PlayerStatsExperience.matchCup=Kup
+PlayerStatsExperience.matchQualification=Kvalifikacije
+PlayerStatsExperience.matchLeague=Liga
+PlayerStatsExperience.matchNtFriendly=NT prijateljske
+PlayerStatsExperience.matchMasters=Hattrick Masters
+PlayerStatsExperience.matchNtLeague=Svjetski kup
+PlayerStatsExperience.matchNtFinals=Svjetski kup (polu) finale
 
 #Series statistics
 rating.average=Prosječna ocjena
@@ -642,6 +686,14 @@ matchOrder.home=Kod kuće
 matchOrder.home.abbr=D
 matchOrder.away=U gostima
 matchOrder.away.abbr=G
+matchOrder.cloneOrder=Kloniraj ovu naredbu
+matchOrder.cloneOrder.abbr=K
+matchOrder.cloneAsSub=Kloniraj i prebaci na zamjenu
+matchOrder.cloneAsSub.abbr=Z
+matchOrder.cloneAsSwap=Kloniraj i prebaci na zamjenu pozicije
+matchOrder.cloneAsSwap.abbr=ZP
+matchOrder.cloneAsChange=Kloniraj i prebaci na promjenu naredbe
+matchOrder.cloneAsChange.abbr=PN
 
 #Skills
 Playmaking=Kreiranje
@@ -890,6 +942,9 @@ copy.fixturesSource.copied=Izvorni kod rasporeda je kopiran.
 
 #matches
 matches.income=Prihod\:
+matches.playedHome=Igrali kod kuće
+matches.playedAway=Igrali u gostima
+matches.playedHomeAway=Igrali kod kuće i u gostima
 
 matches.attackdefensebars=Prikaz 'Napada protiv Obrane'
 matches.right=Desni
@@ -1076,6 +1131,7 @@ button.copy=Kopiraj
 button.up=Gore
 button.down=Dolje
 button.goto=Idi na %s
+button.play=Pusti
 
 
 status.loading=Učitavanje…
@@ -1153,6 +1209,7 @@ tab.alert=Upozorenje
 tab.about=O Foxtricku
 tab.changes=Promjene
 tab.help=Pomoć
+tab.accessibility=Dostupnost
 
 prefs.setup=Postavljanje
 prefs.setup.desc=To su vaše postavke koje je Foxtrick otkrio. Ako su netočne, {molimo prijavite}.
@@ -1207,6 +1264,7 @@ link.recentChanges=Posljednje promjene
 releaseNotes.show=Prikaži obavijesti nakon svakog ažuriranja
 releaseNotes.showFor=Prikaži obavijesti za\:
 releaseNotes.version=Verzija\:
+releaseNotes.translationStatus=Vaš jezik je %s% preveden.
 
 about.copyright=Autorsko pravo
 about.maintainers=Održavatelji
@@ -1218,6 +1276,7 @@ prefs.restoreDefault.ask=Da li ste sigurni da želite vratiti uobičajena podeš
 prefs.deleteToken.ask=Brisanje OAuth koda za TeamID %s?
 prefs.disableAllModules.ask=Da li ste sigurni da želite isključiti sve Foxtrickove opcije?\n
 prefs.revokePermissions.ask=Jeste li sigurni da želite poništiti sve dozvole?
+prefs.needPermissions=Postoje opcije koje su aktivirane i koje trebaju dodatne dozvole za rad. Spremite postavke i dozvolite ili odbijte pristup. Te opcije su\:
 
 ###EOF
 
