--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -58,6 +58,7 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Usa un offset personalizzato per i
 module.StaffMarker.desc=Evidenzia i membri dello staff nei forum e nelle pagine delle squadre. Si possono impostare attributi personalizzati in stile HTML.
 module.StaffMarker.manager.desc=Evidenzia i membri dello staff nelle pagine delle squadre
 module.StaffMarker.own.desc=Se stessi
+module.StaffMarker.external.desc=Evidenzia lo staff di altre applicazioni CHPP
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Visualizza una barra con i collegamenti per la squadra giovanile (anche nelle HT-Mail, comunicati stampa e libro degli ospiti)
 module.ForumYouthIcons.q.desc=Aggiunge l'icona per il tag quote se manca
@@ -103,6 +104,7 @@ module.CopyPostID.desc=Modifica il post ID
 module.CopyPosting.desc=Aggiunge un'icona per copiare i messaggi del forum, inclusi i riferimenti
 module.ShowForumPrefButton.desc=Visualizza un collegamento alle impostazioni del forum in tutte le pagine del forum
 module.Links.desc=Modulo base essenziale per i moduli link per lavorare correttamente.
+module.Links.AddServer.desc=Aggiunge a tutti i GET link l'attuale server di Hattrick. Questo permetterebbe alle pagine esterne di impostare i link per tornare su Hattrick correttamente. Inoltre imposta i cookie di alcune pagine esterne che contengono per esempio "ht-server\=www77.hattrick.org" per lo stesso scopo (solo Mozilla e Chrome).
 module.LinksLeague.desc=Aggiunge qualche collegamento esterno alla pagina della serie
 module.LinksTeam.desc=Aggiunge collegamenti esterni alla pagina della squadra
 module.LinksCountry.desc=Aggiunge collegamenti esterni alla pagina della nazione
@@ -375,6 +377,10 @@ module.ShowLineupSet.Winning.desc=Evidenzia squadre che hanno vinto
 module.SupporterStatsEnhancements.desc=Evidenzia i giocatori attuali della squadra nelle statistiche dei supporter
 module.MobileEnhancements.desc=Insieme di miglioramenti per i dispositivi mobili
 module.MatchOrderInterface.desc=Ritocchi sulla pagina per gli ordini partita. 
+module.MatchOrderInterface.GotTrainingOnField.desc=I giocatori che hanno già ricevuto l'allenamento verranno evidenziati sul campo di gioco (solo per supporters)
+module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Mostra le informazioni riguardo l'ultima partita nel popup
+module.MatchOrderInterface.CloneOrder.desc=Aggiungere un collegamento per clonare gli ordini
+module.MatchOrderInterface.AutoExpandCloned.desc=Espandi automaticamente gli ordini clonati
 module.MatchOrderInterface.Specialties.desc=Mostra le specialità del giocatore
 module.MatchOrderInterface.ShowFaces.desc=Mostra le facce dei giocatori invece delle magliette per le formazioni passate e future
 module.MatchOrderInterface.StayOnPage.desc=Rimani nella pagina degli ordini della partita dopo aver inviato la formazione
@@ -392,12 +398,17 @@ module.RatingsDisplay.HatStats.desc=Come HatStats
 module.RatingsDisplay.HTSums.desc=Come somme di valutazioni di Hattrick
 module.SafeForWork.desc=Sostituisce l'icona e il testo del titolo delle schede di  Hattrick per sembrare meno sospetti. Assicurarsi di disattivare tutti gli altri moduli che potrebbero essere rischiosi, soprattutto i moduli "Alert".
 module.PlayerStatsExperience.desc=Consente di visualizzare i decimali dell'esperienza sulla pagina playerStats
+module.PlayerStatsExperience.AlwaysShowAll.desc=Mostra quante più partite possibili di default quando utilizzi i link sulla pagina dei giocatori o la pagina del rendimento storico
 module.YouthTwins.desc=Visualizza il totale di possibili gemelli per i giocatori delle giovanili in collaborazione con Hattrick youthclub. Non hai bisogno di avere un account su Hattrick youthclub per utilizzare questo modulo. Essendo la visualizzazione dei volti dei giocatori cruciale per trovare i gemelli questa funzione è utile solo per i supporters.
+module.YouthTwins.HideInfoLink.desc=Disabilita il collegamento di informazioni per i nuovi arrivati
+module.FriendlyPool.desc=Colora i paesi visitati nel pool di selezione amichevoli
 #accessability
+module.ARIALandmarks.desc=Aggiungi le regole ARIA a tutte le sezioni del sito per rendere la navigazione più semplice quando si utilizzano lettori di schermo
 
 module.TransferHistoryFilters.desc=Aggiungi opzioni di filtro allo storico trasferimenti 
 
 #htevprediction
+module.HTEVPrediction.desc=Mostra le quote per le partite di campionato fornite da HTEV\: http\://htev.org (by furr_)
 # -----------------------------------------------------------------------------
 
 
@@ -407,6 +418,11 @@ module.TransferHistoryFilters.desc=Aggiungi opzioni di filtro allo storico trasf
 HTEVPrediction.home.short=H
 HTEVPrediction.away.short=A
 HTEVPrediction.tie.short=T
+HTEVPrediction.explainHome=Probabilità che la squadra di casa vinca
+HTEVPrediction.explainTie=Probabilità che la partita finisca in pareggio
+HTEVPrediction.explainAway=Probabilità che la squadra in trasferta vinca
+HTEVPrediction.visitLeague=Visita la lega su http\://www.htev.org
+HTEVPrediction.visitDetailed=Ottieni informazioni dettagliate su questa partita su http\://www.htev.org
 
 #transfer-history-filters
 TransferHistoryFilters.all=Tutti
@@ -674,7 +690,10 @@ matchOrder.cloneOrder=Copiare ordine
 matchOrder.cloneOrder.abbr=C
 matchOrder.cloneAsSub=Clona e converti in sostituzione
 matchOrder.cloneAsSub.abbr=C
+matchOrder.cloneAsSwap=Clona e converti per lo scambio dei giocatori
 matchOrder.cloneAsSwap.abbr=Cp
+matchOrder.cloneAsChange=Clona e converti al cambio di comportamento
+matchOrder.cloneAsChange.abbr=B
 
 #Skills
 Playmaking=Regia
@@ -923,6 +942,9 @@ copy.fixturesSource.copied=La sorgente della pagina del calendario è stata copi
 
 #matches
 matches.income=Incasso\:
+matches.playedHome=Giocate in casa
+matches.playedAway=Giocate in trasferta
+matches.playedHomeAway=Giocate in casa e traferta
 
 matches.attackdefensebars=Barre attacco/difesa
 matches.right=Destra
@@ -1109,6 +1131,7 @@ button.copy=Copia
 button.up=Su
 button.down=Giù
 button.goto=Vai a %s
+button.play=Suona
 
 
 status.loading=Caricamento in corso...
@@ -1186,6 +1209,7 @@ tab.alert=avviso
 tab.about=Riguardo a FoxTrick
 tab.changes=Novità
 tab.help=Aiuto
+tab.accessibility=Accessibilità
 
 prefs.setup=Preferenze
 prefs.setup.desc=Queste sono le impostazioni che FoxTrick ha rilevato. Se non sono corrette, si prega di segnalarlo.
@@ -1240,6 +1264,7 @@ link.recentChanges=Modifiche recenti
 releaseNotes.show=Mostra note sulla release dopo ogni aggiornamento di versione
 releaseNotes.showFor=Mostra note sulla release per\:
 releaseNotes.version=Versione\:
+releaseNotes.translationStatus=La tua lingua è tradotta al %s%.
 
 about.copyright=Copyright
 about.maintainers=Manutentori
@@ -1251,6 +1276,7 @@ prefs.restoreDefault.ask=Sei sicuro di voler ripristinare le impostazioni inizia
 prefs.deleteToken.ask=Eliminare il token segreto dell' OAuth per la squadra con ID %s?
 prefs.disableAllModules.ask=Sei sicuro di voler disabilitare tutti i moduli?
 prefs.revokePermissions.ask=Sei sicuro di voler rimuovere tutte le autorizzazioni opzionali?
+prefs.needPermissions=Ci sono opzioni attivate che hanno bisogno di ulteriori autorizzazioni per poter funzionare. Salva le preferenze e acconsenti o rifiuta l'accesso nella finestra di dialogo seguente. Tali opzioni sono\:
 
 ###EOF
 
