--- a/content/locale/tr/foxtrick.properties
+++ b/content/locale/tr/foxtrick.properties
@@ -174,6 +174,7 @@ module.TeamStats.General.desc=Genel bilgi (TSI/yaş)
 module.TeamStats.Speciality.desc=Özel yetenek
 module.TeamStats.Personality.desc=Kişilik
 module.TeamStats.Status.desc=Durum (kartlar/sakatlıklar)
+module.TeamStats.Attributes.desc=Davranışlar
 module.TeamStats.Skills.desc=Yetenekler
 module.TeamStats.Match.desc=Maç
 module.TeamStats.Current_league.desc=Şu anki lig
@@ -396,8 +397,20 @@ module.PlayerStatsExperience.desc=playerStats'ta oyuncunun tecrübesinin alt bec
 # IN-GAME STRINGS. translate first
 
 #htev
+HTEVPrediction.home.short=H
+HTEVPrediction.away.short=A
+HTEVPrediction.tie.short=T
+HTEVPrediction.explainHome=Ev sahibi takımın kazanma olasılığı
+HTEVPrediction.explainTie=Maçın berabere bitme olasılığı
+HTEVPrediction.explainAway=Rakip takımın kazanma olasılığı
+HTEVPrediction.visitLeague=Ligi http\://www.htev.org 'da ziyaret edin
+HTEVPrediction.visitDetailed=Daha detaylı bilgiler için http\://www.htev.org
 
 #transfer-history-filters
+TransferHistoryFilters.all=Tüm
+TransferHistoryFilters.sold=Satılan
+TransferHistoryFilters.bought=Alınan
+TransferHistoryFilters.filter=Filtre\:
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Ana kulüp bonusu)
@@ -406,8 +419,10 @@ LoyaltyDisplay.loyaltyBonus=(Sadakat bonusu)
 #Youth-Twins
 YouthTwins.possibleTwins=Bu oyuncunun %1 olası ikizi var.;Bu oyuncu, %1 olası ikizleri var.
 YouthTwins.markedTwins=İkiz olarak işaretlenmiş\: %1
+YouthTwins.nonTwins=İkiz değil\:%1
 YouthTwins.undecidedTwins=Henüz işaretlenmemiş\: %1
 YouthTwins.nonHyUser=Oyuncunun potansiyeli hakkında detaylı biligiyi hattrick youthclubda bulabilirsiniz.
+YouthTwins.infoText=İkiz oyuncular kimlerdir ve bunlardan nasıl yararlanabiliriz?
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=28 tecrübe puanının %1 veya %2 puanını topladı. Tecrübesi %3 veya %4 civarında.
@@ -417,7 +432,22 @@ PlayerStatsExperience.ExperienceChange.title.abbr=XP +
 PlayerStatsExperience.Walkover=Hükmen biten bir maç. Bu yüzden oyuncu tecrübe kazanamadı.
 
 
+PlayerStatsExperience.MatchesSinceSkilup=Son dizilimden bu yana maçlar
+PlayerStatsExperience.matches=Maçlar
+PlayerStatsExperience.minutes=Dakika
+PlayerStatsExperience.minXPpts=Min. XP Puan.
+PlayerStatsExperience.maxXPpts=Max. XP Puanı.
+PlayerStatsExperience.sum=Toplam
+PlayerStatsExperience.Experience=Tecrübe
+PlayerStatsExperience.PerformanceHistory=Performans geçmişi
 
+PlayerStatsExperience.matchCup=Kupa
+PlayerStatsExperience.matchQualification=Elemeler
+PlayerStatsExperience.matchLeague=Lig
+PlayerStatsExperience.matchNtFriendly=MT Hazırlık maçları
+PlayerStatsExperience.matchMasters=Hattrick Masters
+PlayerStatsExperience.matchNtLeague=Dünya Kupası
+PlayerStatsExperience.matchNtFinals=Dünya Kupası (yarı-) Final
 
 #Series statistics
 rating.average=Ortalama reyting
@@ -880,6 +910,8 @@ copy.fixturesSource.copied=Fikstür kopyalandı.
 
 #matches
 matches.income=Gelir\:
+matches.playedHome=Evinde oynadı
+matches.playedAway=Deplasmanda oynadı
 
 matches.attackdefensebars=Atak & Defans
 matches.right=Sağ
@@ -1066,6 +1098,7 @@ button.copy=Kopyala
 button.up=Yukarı
 button.down=Aşağı
 button.goto=%s'e git
+button.play=Çal
 
 
 status.loading=Yükleniyor...
@@ -1143,6 +1176,7 @@ tab.alert=Uyarı
 tab.about=Hakkında
 tab.changes=Değişiklikler
 tab.help=Yardım
+tab.accessibility=Erişilebilirlik
 
 prefs.setup=Kurulum
 prefs.setup.desc=Bunlar FoxTrick tarafından algılanan ayarlarınız. Yanlışsa, {lütfen raporla}.
