--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -160,6 +160,12 @@ module.PersonalityImages.desc=Додаје обојене бројеве за п
 module.HideSignatures.desc=Сакрива потпис корисника на Форуму и уместо њега убацује линк 'Потпис'.
 module.MarkUnread.desc=Додаје линк који означава све наредне постове у теми као 'непрочитане'.
 module.ForumModeratorIconLinks.desc=Додаје иконице за модераторске функције на врху тема када су доступне
+module.ForumModeratorIconLinks.threadclose.desc="Затвори Тему"
+module.ForumModeratorIconLinks.threadclosereply.desc="Затвори тему и одговори"
+module.ForumModeratorIconLinks.threaddelete.desc="Обриши тему"
+module.ForumModeratorIconLinks.threadrename.desc="Промените име"
+module.ForumModeratorIconLinks.changestickydate.desc="Промени sticky подешавања"
+module.ForumModeratorIconLinks.threadmove.desc="Пребаци тему на други форум"
 module.ForumNextAndPrevious.desc=Уклања дугмиће 'Наредни' и 'Претходни' на форумским темама кад год су неактивни.
 module.ForumLastPost.desc=Замењује линкове у листи тема на форуму линковима до последње поруке у већ прочитаним темама.
 module.ForumLastPost.lastpage.desc=Иди на последњу страницу, а не на последњу поруку.
