Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10048 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -159,13 +159,7 @@ module.ConfirmActions.StaffChange.desc=Запошљавања/отпуштања
 module.PersonalityImages.desc=Додаје обојене бројеве за популарност, карактер и темперамент на страници играча.
 module.HideSignatures.desc=Сакрива потпис корисника на Форуму и уместо њега убацује линк 'Потпис'.
 module.MarkUnread.desc=Додаје линк који означава све наредне постове у теми као 'непрочитане'.
-module.ForumModeratorIconLinks.desc=Додаје иконице за модераторске функције на врху тема када су доступне
-module.ForumModeratorIconLinks.threadclose.desc="Затвори Тему"
-module.ForumModeratorIconLinks.threadclosereply.desc="Затвори тему и одговори"
-module.ForumModeratorIconLinks.threaddelete.desc="Обриши тему"
-module.ForumModeratorIconLinks.threadrename.desc="Промените име"
-module.ForumModeratorIconLinks.changestickydate.desc="Промени sticky подешавања"
-module.ForumModeratorIconLinks.threadmove.desc="Пребаци тему на други форум"
+module.ForumModeratorPopup.desc=Додаје поп-ап мени на врху теме на Форуму ради лакшег модерирања
 module.ForumNextAndPrevious.desc=Уклања дугмиће 'Наредни' и 'Претходни' на форумским темама кад год су неактивни.
 module.ForumLastPost.desc=Замењује линкове у листи тема на форуму линковима до последње поруке у већ прочитаним темама.
 module.ForumLastPost.lastpage.desc=Иди на последњу страницу, а не на последњу поруку.
