--- a/content/locale/ko/release-notes.xml
+++ b/content/locale/ko/release-notes.xml
@@ -15,20 +15,40 @@
 <note version="beta">
 <item>이것은 다음 배포의 beta 버전 입니다. 이 버전에서 저희 crowd-tranlation 페이지를 통해 번역해주세요. <xhtml:a href="http://crowdin.net/project/foxtrick">crowdin.net</xhtml:a></item>
 </note>
+
+<note version="0.11.0">
+<item>● NEW: <module>ForumModeratorPopup</module>: 토론장 중재자를 위해서 스레드 상단에 검토 작업을 간략화하는 드롭 다운 메뉴를 추가했습니다.</item>
+<item>● <module>SkillTable</module>: 기존 정렬에 다른 열의 상단을 ctrl + 왼쪽 클릭 으로 보조 정렬하는 것을 추가하였습니다.</item>
+<item>● <module>SkillTable</module>: 이제부터 선수 이름은 더 적은 칸에 들어가기 위해 약식합니다.</item>
+<item>● Tabs: 대부분의 사이트에 커스텀 탭을 추가하기 위해 backend 기능을 추가하였습니다. (HT의 다가오는 경기 탭과 유사함)</item>
+<item></item>
+<item><xhtml:b>버그 수정</xhtml:b></item>
+<item></item>
+</note>
+
 <note version="0.10.0">
 <item>● NEW: <module>TransferHistoryFilters</module>: 영입했거나 매도한 선수들의 이적들만 필터링하는 것을 추가합니다. 선수 기록이 아닌 클럽 기록만 가능합니다(기본 활성화)</item>
 <item>● NEW: <module>FriendlyPool</module>: 친선 경기 풀 안의 방문한 나라를 색칠합니다. (서포터즈만, 기본 활성화)</item>
 <item>● NEW: <module>HTEVPrediction</module>: <xhtml:a href="http://htev.org">HTEV</xhtml:a>에서 제공하는 리그 경기에 대한 일치 확률을 표시합니다. (기본 활성화)</item>
-<item>● PlayerStatsExperience: 새 버전에 환상적인 기능이 추가되었습니다. 신뢰할 수 있는 데이터가 있다면 더욱 자세하고 컬러풀한 피드백을 얻을 수 있습니다. (적록색맹 유저를 위해 테스트 해주신 SeanConnery (7751762)에게 감사 드립니다)</item>
-<item>● <module>MatchOrderInterface</module>: 기존 지시사항을 복사할 수 있습니다. 고의로 선수들은 입력되지 않습니다. </item>
-<item>● 몇 가지 layouting/css을 조금 변경하였습니다.</item>
-<item>● YouthTwins: 쌍둥이에 대한 링크 정보를 숨기는 옵션을 추가하였습니다.(기본 비활성화)</item>
-<item>● StaffMarker: 해트트릭 유스클럽 서버 접근을 줄이기 위해 이제 HY 스탭 정보를 Google Code을 통해 얻습니다.</item>
-<item>● MatchPlayerColouring: 경기 종료 전에 경기장에 들어오고 나간 선수에 대해서도이제 제대로 동작합니다.</item>
-<item>● TeamPopupLinks: hattrick.org의 느낌과 전체적으로 잘 어울리게 몇 가지를 재스타일링 했습니다</item>
+<item>● <module>PlayerStatsExperience</module>: 새 버전에 환상적인 기능이 추가되었습니다. 신뢰할 수 있는 데이터가 있다면 더욱 자세하고 컬러풀한 피드백을 얻을 수 있습니다. (적록색맹 유저를 위해 테스트 해주신 SeanConnery (7751762)에게 감사 드립니다)</item>
+<item>● <module>MatchOrderInterface</module>: 기존 지시사항을 복제하거나 복제 및 변환할 수 있습니다. 고의로 선수들은 입력되지 않습니다. </item>
+<item>● <module>YouthTwins</module>: 쌍둥이에 대한 링크 정보를 숨기는 옵션을 추가하였습니다.(기본 비활성화)</item>
+<item>● <module>StaffMarker</module>:: 해트트릭 유스클럽 서버 접근을 줄이기 위해 이제 HY 스탭 정보를 Google Code을 통해 얻습니다.</item>
+<item>● <module>TeamPopupLinks</module>:: hattrick.org의 느낌과 전체적으로 잘 어울리게 몇 가지를 재스타일링 했습니다</item>
 <item>● 핵심 선수 페이지를 지원합니다</item>
+<item>● 안드로이드용 파이어폭스를 위해서 몇 가지를 개선하였습니다.</item>
 <item>● 환경설정에서 경보 사운드를 테스트 할 수 있습니다.</item>
+<item>● 데이터 저장에 관련된 내부적인 변경이 있었습니다.</item>
+<item>● 몇 가지 사소한 변경과 깜빡했던 것을 수정하였습니다.</item>
 <item></item>
+<item><xhtml:b>버그 수정</xhtml:b></item>
+<item>● <module>ExtendedPlayerDetails</module>: 한국어와 그 이외에 다른 언어에서 존재했던 잘못된 주급과 시즌 급료를 수정하였습니다.</item>
+<item>● <module>MatchOrderInterface</module>: 대체된 경우에도 얼굴이 표시되고 과거 라인업에 있던 선수는 강조 표시됩니다.</item>
+<item>● <module>MatchPlayerColouring</module>: 경기 종료 전에 경기장에 들어오고 나간 선수에 대해서도이제 제대로 동작합니다.</item>
+<item>● <module>HideSignatures</module>: HT 설정을 서명 자르기로 설정했을 때 제대로 동작하지 않던 것을 수정했습니다.</item>
+<item>● <module>PlayerStatsExperience</module>: NT/U-20 결승, 준결승 감지를 수정하였습니다.</item>
+<item>● <module>TeamPopupLinks</module>: 방명록에 탭 무한 생성을 수정하였습니다.</item>
+<item>● 중간값에 관한 RTL 언어 문제를 수정하였습니다.</item>
 <item><xhtml:b>시각 또는 청각 장애우분들을 위해</xhtml:b></item>
 <item>우리는 설정 페이지에 내게 필요한 옵션과 관련된 모든 모듈을 포함할 영역을 추가하였습니다.</item>
 <item>● NEW: <module>ARIALandmarks</module>: 웹사이트에 ARIA landmarks를 추가하였습니다. 이것은 스크린 리더를 사용하여 사이트를 탐색하는데 도움이 됩니다. 두 가지 주요 탐색 바와 구독하는 모든 토론장은 "탐색"이 있습니다. 메인 콘텐츠는 "메인"역할을 가집니다. 모든 추가적인 정보와 링크를 포함하는 사이드 바는 "보충"으로 표시될 것입니다. 전체 검색과 포럼 검색을 "검색" 이 있습니다.</item>
