Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10088 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -234,6 +234,7 @@ module.ForumPresentation.moved_avatarinfo_fix.desc=Исправља погреш
 module.SkinPlugin.desc=Додаје ваш 'CSS' скин за Хеттрик.
 module.CurrencyConverter.desc=Конвертује валуту са Хеттрика.
 module.MovePlayerStatement.desc=Помера играчеву изјаву у оквир његове сличице. Ако су сличице искључене, изјава неће бити приказана.
+module.MovePlayerStatement.DeleteInstead.desc=Уклања изјаву играча и кад је укључено приказивање слике.
 module.TickerColoring.desc=Бојење различитих догађаја приказаних у тикеру.
 #ExtraShortcuts
 module.ExtraShortcuts.desc=Додаје линк и иконицу за супортер статистику главним иконицама у заглављу Хeттрик странице.
