Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10094 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -1027,6 +1027,8 @@ TransferSearchResultFilters.hideBruised=Сакриј угруване
 TransferSearchResultFilters.hideInjured=Сакриј повређене
 TransferSearchResultFilters.hideSuspended=Сакриј суспендоване
 TransferSearchResultFilters.days=Дана:
+TransferSearchResultFilters.form=Форма:
+TransferSearchResultFilters.hideOrdinary=Сакриј играче без специјалности
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Погледај
