*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.10.0@10101 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -1145,7 +1145,7 @@ oauth.why=Warum soll ich FoxTrick autorisieren?
 oauth.link=Erhalte den Bestätigungscode von chpp.hattrick.org
 oauth.success=FoxTrick wurde erfolgreich autorisiert\! Bitte lade die Seite neu um die von FoxTrick bereitgestellten Daten angezeigt zu bekommen.
 
-api.failure=Datenzugriff auf Hattrick fehlgeschalgen. Du musst FoxTrick autorisieren um Zugriff auf deine Teamdaten zu erhalten. Wenn du dies bereits getan hast, überprüfe deine Netzwerkverbindung und versuche es später erneut.
+api.failure=Datenzugriff auf Hattrick fehlgeschlagen. Du musst FoxTrick autorisieren um Zugriff auf deine Teamdaten zu erhalten. Wenn du dies bereits getan hast, überprüfe deine Netzwerkverbindung und versuche es später erneut.
 api.serverUnavailable=Server nicht verfügbar
 api.clearCache=Cache leeren
 api.clearCache.title=Leert FoxTricks eigenen Xml-Cache. FoxTrick läd bei Bedarf zusätzliche Informationen von Hattricks Servern. Bis zum nächsten Neustart des Browsers benutzt FoxTrick lokal gespeicherte Kopien dieser Daten. Gelegendlich können diese nicht mehr aktuell sein. Lösche den Cache, falls FoxTrick die Zusatzdaten erneut laden soll.
