--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -840,7 +840,7 @@ FriendliesGoals=Buts - matchs amicaux
 FriendliesGoals.abbr=BA
 CareerGoals=Buts dans sa carrière
 CareerGoals.abbr=BC
-Hattricks=Coups de chapeau
+Hattricks=Coups du chapeau
 Hattricks.abbr=HT
 Current_club=Équipe actuelle
 Current_club.abbr=Équipe
