Russian translation update to r10098
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10105 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/release-notes.xml
+++ b/content/locale/ru/release-notes.xml
@@ -15,23 +15,47 @@
 	<note version="beta" localized-version="бета-версии">
 		<item>Это - бета-версия следующего выпуска. Пожалуйста, помогите нам с переводом этой версии на краудсорсинговом сайте <xhtml:a href="http://crowdin.net/project/foxtrick">crowdin.net</xhtml:a>. </item>
 	</note>
+
+	<note version="0.11.0">
+		<item>● НОВЫЙ модуль <module>ForumModeratorPopup</module>: в заголовок темы добавлено выпадающее меню с инструментами модерирования для упрощения модерации.</item> 
+		<item>● НОВЫЙ модуль <module>PlayerStatsTrainingWeek</module>: добавлена возможность группировки матчей в тренировочной неделе вместо календарной.</item>
+		<item>● Модуль <module>SkillTable</module>: добавлена возможность вторичной сортировки при использовании Ctrl + клик на заголовке другой колонки.</item>
+		<item>● Модуль <module>SkillTable</module>: теперь имена игроков для сокращения занатого ими мемта сокращаются до инициалов.</item>
+		<item>● Модуль <module>TransferSearchResultFilters</module>: возможность фильтра по форме и скрытия игроков без специализаций; модуль теперь работает совместно с модулем <module>TransferSearchFilters</module>.</item>
+		<item>● Модуль <module>FriendlyPool</module>: возможность расширить поле выбора страны.</item>
+		<item>● Модуль <module>MovePlayerStatement</module>: возможность для удаления сообщения независимо ни от чего.</item>
+		<item>● Tabs: Added backend functionality to add custom tabs to most sites. (like the HT own tabs for upcoming matches).</item>
+		<item><xhtml:b>Исправления.</xhtml:b></item>
+		<item></item>
+	</note>
+
 	<note version="0.10.0">
 		<item>● НОВЫЙ модуль <module>TransferHistoryFilters</module>: позволяет показывать только проданных или только купленных игроков. Доступно только для истории трансферов команды, не для игроков (включен по умолчанию)</item>
 		<item>● НОВЫЙ модуль <module>FriendlyPool</module>: подсветка посещённых стран в пуле товарищеских матчей (только для supporter-ов, включено по умолчанию)</item>
 		<item>● НОВЫЙ модуль <module>HTEVPrediction</module>: показывает шансы команд по мнению <xhtml:a href="http://htev.org">HTEV</xhtml:a> (включено по умолчанию)</item>
 		<item>● Модуль <module>PlayerStatsExperience</module>: новая версия раскраски с большим количеством деталей и обратной связью при надёжности данных (благодарим SeanConnery (7751762) за тестирование цвета для пользователей, страдающих дейтеранопией - невосприимчивостью к красной и зелёной части спектра).</item>
-		<item>● Модуль <module>MatchOrderInterface</module>: возможность для клонирования существующей расстановки.</item>
-		<item>● Небольшие изменения внешнего вида и стилей css</item>
+		<item>● Модуль <module>MatchOrderInterface</module>: возможность для клонирования и преобразования существующего указания на странице замен.</item>
 		<item>● Модуль <module>YouthTwins</module>: добавлен параметр для скрытия информации о близнецах (по умолчанию выключен)</item>
 		<item>● Модуль <module>StaffMarker</module>: теперь для получения списка администраторов Hattrick Youthclub используется сайт Google Code вместо перегруженных серверов HY</item>
-		<item>● Модуль <module>MatchPlayerColouring</module>: теперь работает корректно и для игроков, проведших неполный предыдущий матч</item>
 		<item>● Модуль <module>TeamPopupLinks</module>: небольшое изменение стиля для лучшей интеграции в общую картину hattrick.org</item>
 		<item>● Поддержка страницы ключевых игроков</item>
+		<item>● Некоторые улучшения для Firefox на платформе Android</item>
 		<item>● Возможность проверить звук на странице настроек</item>
+		<item>● Некоторые внутренние изменения в части хранения данных</item>
+		<item>● Некоторые другие мелкие исправления, про которые мы уже забыли</item>
+		<item></item>
+		<item><xhtml:b>Иправления</xhtml:b></item>
+		<item>● Модуль <module>ExtendedPlayerDetails</module>: неверное отображение сезонной зарплаты при выборе корейского и, возможно, некоторых других языков</item>
+		<item>● Модуль <module>MatchOrderInterface</module>: в прошлых расстановках лица будут показаны также у заменённых и подсвеченных игроков</item>
+		<item>● Модуль <module>MatchPlayerColouring</module>: теперь верно работает и для игроков, которые вышли на поле или покинули его до завершения игры</item>
+		<item>● Модуль <module>HideSignatures</module>: не работало скрытие подписи, когда в настройках HT было указано сокращать подпись</item>
+		<item>● Модуль <module>PlayerStatsExperience</module>: исправлено определение полуфиналов и финала чемпионата мира</item>
+		<item>● Модуль <module>TeamPopupLinks</module>: исправлено зацикливание при работе в гостевой книге</item>
+		<item>● Исправление для языков с письмом справа налево в отображении среднерыночной цены</item>
 		<item></item>
 		<item><xhtml:b>Для пользователей с нарушениями зрения или слуха</xhtml:b></item>
 		<item>Мы добавили новую секцию на страницу настроек, на которую поместили все модули, относящиеся к специальным возможностям.</item>
-		<item>● Новый модуль <module>ARIALandmarks</module>: добавляет на сайт навигацию ARIA. Это должно помочь с навигацией по сайту при использовании планшетных компьютеров. Оба основных окна навигации и список подписанных форумов получили роль "navigation". Главное окно - роль "main". Все боковые окна с дополнительной информацией и ссылками - "complementary". Ссылки на глобальный поиск и поиск по форуму - конечно, роль "search".</item>
+		<item>● Новый модуль <module>ARIALandmarks</module>: добавляет на сайт навигацию ARIA. Это должно помочь с навигацией по сайту при использовании системы зачитывания текста с экрана. Оба основных окна навигации и список подписанных форумов получили роль "navigation". Главное окно - роль "main". Все боковые окна с дополнительной информацией и ссылками - "complementary". Ссылки на глобальный поиск и поиск по форуму - конечно, роль "search".</item>
 		<item>Если у вас есть дальнейшие предложения - не стесняйтесь связываться с нами. Мы также просматриваем форум Hattrick Access.</item>
 	</note>
 
