--- a/content/locale/ko/release-notes.xml
+++ b/content/locale/ko/release-notes.xml
@@ -13,13 +13,17 @@
 <item>자세한 내용은 Google Code의 <xhtml:a href="http://code.google.com/p/foxtrick/source/list">보고 기록</xhtml:a>을 참조하세요.</item>
 </note>
 <note version="beta">
-<item>이것은 다음 배포의 beta 버전 입니다. 이 버전에서 저희 crowd-tranlation 페이지를 통해 번역해주세요. <xhtml:a href="http://crowdin.net/project/foxtrick">crowdin.net</xhtml:a></item>
+<item>이것은 다음 배포의 beta 버전 입니다. 이 버전에서 저희 군중-번역 페이지를 통해 번역해주세요. <xhtml:a href="http://crowdin.net/project/foxtrick">crowdin.net</xhtml:a></item>
 </note>
 
 <note version="0.11.0">
-<item>● NEW: <module>ForumModeratorPopup</module>: 토론장 중재자를 위해서 스레드 상단에 검토 작업을 간략화하는 드롭 다운 메뉴를 추가했습니다.</item>
+<item>● NEW: <module>ForumModeratorPopup</module>: 토론장 중재자를 위하여 스레드 상단에 검토 작업을 간략화하는 드롭 다운 메뉴를 추가했습니다.</item>
+<item>● NEW: <module>PlayerStatsTrainingWeek</module>: 일정 주간 대신에 훈련 주간에 따른 경기를 그룹화하는 기능을 추가했습니다. </item>
 <item>● <module>SkillTable</module>: 기존 정렬에 다른 열의 상단을 ctrl + 왼쪽 클릭 으로 보조 정렬하는 것을 추가하였습니다.</item>
-<item>● <module>SkillTable</module>: 이제부터 선수 이름은 더 적은 칸에 들어가기 위해 약식합니다.</item>
+<item>● <module>SkillTable</module>: 이제부터 선수 이름은 더 적은 칸에 들어가기 위해 생략합니다.</item>
+<item>● <module>TransferSearchResultFilters</module>: form 필터와 특수능력이 없는 선수를 숨기는 것을 추가하였습니다. 이제 <module>TransferSearchFilters</module>와 협력합니다.</item>
+<item>● <module>FriendlyPool</module>: 나라 선택 상자를 확장하는 것을 추가했습니다.</item>
+<item>● <module>MovePlayerStatement</module>: 모든 명세서를 제거하는 것을 추가했습니다.</item>
 <item>● Tabs: 대부분의 사이트에 커스텀 탭을 추가하기 위해 backend 기능을 추가하였습니다. (HT의 다가오는 경기 탭과 유사함)</item>
 <item></item>
 <item><xhtml:b>버그 수정</xhtml:b></item>
@@ -47,7 +51,7 @@
 <item>● <module>MatchPlayerColouring</module>: 경기 종료 전에 경기장에 들어오고 나간 선수에 대해서도이제 제대로 동작합니다.</item>
 <item>● <module>HideSignatures</module>: HT 설정을 서명 자르기로 설정했을 때 제대로 동작하지 않던 것을 수정했습니다.</item>
 <item>● <module>PlayerStatsExperience</module>: NT/U-20 결승, 준결승 감지를 수정하였습니다.</item>
-<item>● <module>TeamPopupLinks</module>: 방명록에 탭 무한 생성을 수정하였습니다.</item>
+<item>● <module>TeamPopupLinks</module>: 방명록에 탭 무한 생성하는 것을 수정하였습니다.</item>
 <item>● 중간값에 관한 RTL 언어 문제를 수정하였습니다.</item>
 <item><xhtml:b>시각 또는 청각 장애우분들을 위해</xhtml:b></item>
 <item>우리는 설정 페이지에 내게 필요한 옵션과 관련된 모든 모듈을 포함할 영역을 추가하였습니다.</item>
