*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.10.0@10113 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -447,15 +447,15 @@ PlayerStatsExperience.ExperienceText=28 tapasztalati pontból már %1 és %2 kö
 PlayerStatsExperience.NotAllMatchesVisible=Az aktuális szint magasabb lehet, mert nincs minden mérkőzés megjelenítve.
 PlayerStatsExperience.NoSkillUpFound=Az aktuális szint magasabb lehet, mert nem rögzített tapasztalat szintlépés található.
 PlayerStatsExperience.ExperienceChange.title=Tapasztalatszerzés
-PlayerStatsExperience.ExperienceChange.title.abbr=TAP+
+PlayerStatsExperience.ExperienceChange.title.abbr=TP+
 PlayerStatsExperience.Walkover=Játék nélküli győzelem, ezért a játékosok nem kaptak tapasztalatot.
 
 
 PlayerStatsExperience.MatchesSinceSkilup=Mérkőzések az utolsó szintlépés óta
-PlayerStatsExperience.matches=Mérkőzések
+PlayerStatsExperience.matches=Mérkőzés
 PlayerStatsExperience.minutes=Perc
-PlayerStatsExperience.minXPpts=Min. XP pont
-PlayerStatsExperience.maxXPpts=Max XP pont
+PlayerStatsExperience.minXPpts=Min. TP.
+PlayerStatsExperience.maxXPpts=Max TP.
 PlayerStatsExperience.sum=Összesen
 PlayerStatsExperience.Experience=Tapasztalat
 PlayerStatsExperience.PerformanceHistory=Korábbi teljesítmény
@@ -467,7 +467,7 @@ PlayerStatsExperience.matchNationalFriendly=Hazai
 PlayerStatsExperience.matchCup=Kupa
 PlayerStatsExperience.matchQualification=Osztályozó
 PlayerStatsExperience.matchLeague=Bajnoki
-PlayerStatsExperience.matchNtFriendly=NT barátságos mérkőzések
+PlayerStatsExperience.matchNtFriendly=Nemzeti válogatott barátságos mérkőzés
 PlayerStatsExperience.matchMasters=Hattrick Masters
 PlayerStatsExperience.matchNtLeague=Világbajnokság
 PlayerStatsExperience.matchNtFinals=Világbajnokság (elő-)döntő
